# gen-countdown-frames

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  README.md  flake8.conf  gen-countdown-frames  lint.sh  pyproject.toml
.github/workflows/: python-app.yml
src/gen_countdown_frames/: __init__.py  cli.py
